Thu Feb  7 23:02:53 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_orb_tests.lst:

        * tao/RTCORBA/RT_Invocation_Endpoint_Selectors.cpp:

        * tao/Stub.h:
        * tao/Stub.inl:

        * tests/Bug_4059_Regression:

          Fix for bugzilla 4059.

Thu Feb  7 22:55:30 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * MPC/config/dynamic_tp.mpb:
        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Static/server.cpp:

          Fix scoreboard issues with corba_e_micro avoidance and a compile warning.

Thu Feb  7 22:45:43 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * orbsvcs/tests/FT_Naming/Load_Balancing/Basic.cpp:
        * orbsvcs/tests/FT_Naming/Load_Balancing/client.cpp:

          Scoreboard cleanup for wchar compatibility.

Thu Feb  7 22:28:22 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/nsgroup_svc.cpp:

          Scoreboard cleanup for wchar compatibility.

Thu Feb  7 21:39:47 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * tao/Storable_Factory.h:
        * tao/Storable_File_Guard.h:
        * tao/Storable_File_Guard.cpp:
        * tao/Storable_FlatFileStream.h:
        * tao/Storable_FlatFileStream.cpp:

          Instead of a mixture of char and ACE_TCHAR usage,
          changed to use char wherever possible since the
          data being persisted will not be of wide character type.
          Doing this resulted in tests that use this code
          to pass when wchar usage is enabled.

        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.h:
        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.cpp:
        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context_Activator.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Group_List_Store.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Group_List_Store.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Storable.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Storable.cpp: